@@ -1,5 +1,6 @@
 2014.12.xx
 * GTK3: adjust buttons within inforbars
+* GTK3: adjust spinbutton entry
 
 2014.12.07
 * GTK3: scrollbar junction now looks fine;
